Name:                amelie
Version:             0.1
Synopsis:            Haskell paste web site.
Description:         Haskell paste web site.
Homepage:            http://hpaste.org/
License:             GPL
Author:              Chris Done <chrisdone@gmail.com>
Maintainer:          Chris Done <chrisdone@gmail.com>
Copyright:           2011 by Chris Done
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable amelie
  Main-is:           Main.hs
  Ghc-options:       -threaded -O2
  Hs-source-dirs:    src
  Build-depends:     base          >= 4     && < 5
                    ,snap-server   >= 0.4   && < 0.5
                    ,snap-core     >= 0.4   && < 0.5
                    ,text          >= 0.11  && < 0.12
                    ,blaze-html    >= 0.4   && < 0.5
                    ,bytestring    >= 0.9   && < 0.10
                    ,containers    >= 0.3   && < 0.4
                    ,mtl           >= 2.0   && < 2.1
                    ,transformers  >= 0.2   && < 0.3
                    ,utf8-string   >= 0.3   && < 0.4
                    ,pgsql-simple  >= 0.1.1
                    ,network       >= 2.3   && < 2.4
                    ,MonadCatchIO-transformers >= 0.2 && < 0.3
                    ,time          >= 1.1
                    ,old-locale    >= 1.0
                    ,safe          >= 0.3
                    ,hscolour      >= 1.17
                    ,HJScript      >= 0.5
                    ,hlint         >= 1.8