Name:                amelie
Version:             0.1
Synopsis:            Haskell paste web site.
Description:         Haskell paste web site.
Homepage:            http://hpaste.org/
License:             GPL
Author:              Chris Done <chrisdone@gmail.com>
Maintainer:          Chris Done <chrisdone@gmail.com>
Copyright:           2011 by Chris Done
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable amelie
  Main-is:           Main.hs
  Ghc-options:       -threaded -Wall -02 -fforce-recomp -fno-warn-name-shadowing
  Hs-source-dirs:    src
  Build-depends:     
    -- Hard versions
    base                      >= 4     && < 5
   ,pgsql-simple              >= 0.1.1
   ,css                       >= 0.1
   ,named-formlet             >= 0.1
   -- Liberal versions
   ,ConfigFile
   ,Diff
   ,HJScript
   ,MissingH
   ,MonadCatchIO-transformers
   ,blaze-builder
   ,blaze-html
   ,bytestring
   ,containers
   ,directory
   ,download-curl
   ,feed
   ,filepath
   ,haskell-src-exts
   ,hlint
   ,hscolour
   ,mtl
   ,network
   ,old-locale
   ,safe
   ,snap-core
   ,snap-server
   ,text
   ,time
   ,transformers
   ,utf8-string
